# dnd-scheduler

./: .dockerignore  .gitignore  DEPLOYMENT-NGINX.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.docker/: README-PROD.md  docker-compose.prod.yml  docker-compose.yml  nginx-host.conf
.next/: app-build-manifest.json  trace
.next/server/: _error.js  app-paths-manifest.json  edge-runtime-webpack.js  middleware-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/pages/: _error.js
.next/server/src/: middleware.js
.next/server/vendor-chunks/: @auth.js  @babel.js  (+28 more)
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  email.py  main.py  models.py  permissions.py  schemas.py
backend/app/routers/: auth.py  availability.py  availability_by_days.py  availability_improved.py  events.py  groups.py  join.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 202405260001_initial.py  202405260002_add_blacklisted_token.py  202502070001_add_availability.py  202502070002_fix_availability_columns.py  202602090001_limit_group_name_length.py  202602240001_add_email_verification_token.py
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.test.tsx  main.tsx  router.tsx
prisma/: schema.prisma
src/: middleware.ts
src/app/: globals.css  globals_new.css  layout.tsx
src/lib/: auth.ts  prisma.ts  time.ts
(+200 files in other folders)
